Add basic css structure

--- a/app/index.html
+++ b/app/index.html
@@ -3,24 +3,43 @@
   <head>
   	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- main CSS -->
+    <link href="css/main.css" rel="stylesheet">
+
+    <!-- custom font -->
+    <link href="fonts/aileron/Aileron-Bold.otf" rel="stylesheet" type="text/css">
+
   	</head>
   <body>
   	<header>
   		<div id="sky">
-  			skya
+
   		</div>
   		<div id="mountains">
+  			<div class="flex-tier">
+  				<div class="line1"></div>
+  			</div>
+  			<div class="flex-tier"></div>
+  			<div class="flex-tier"></div>
+  			<div class="flex-last"></div>
   		</div>
   	</header>
-  	<section id="build" class="cover-sectin">
+  	<section id="build" class="content-section">
+  		<div>LOREM IPSUM PUTAIN!</div>
   	</section>
-  	<section id="write">
+  	<section id="write" class="content-section">
+  		<div>LOREM IPSUM PUTAIN!</div>
   	</section>
-  	<section id="other">
+  	<section id="other" class="content-section">
+  		<div>LOREM IPSUM PUTAIN!</div>
   	</section>
-  	<section id="mba">
+  	<section id="mba" class="content-section">
+  		<div>LOREM IPSUM PUTAIN!</div>
   	</section>
-  	<section id="contact">
+  	<section id="contact" class="content-section">
+  		<div>LOREM IPSUM PUTAIN!</div>
   	</section>
   </body>
 </html>
