--- a/app/index.html
+++ b/app/index.html
@@ -55,19 +55,19 @@
   	</section>
 
   	<section id="write" class="content-section flex-column">
-  		<p>I write in <span class="bold-font">HTML, CSS, Javascript, JQuery, Ruby</span>.</p>
+  		<p>I write in <span class="bold-font">HTML, CSS, Javascript, JQuery, Ruby.</span></p>
       <p> and sometimes in <span class="bold-font">Python</span> and <span class="bold-font">Ruby On Rails.</span></p>
   	</section>
 
   	<section id="other" class="content-section flex-column">
   		<p>I also write on <span class="bold-font"> marketing.</span></p>
       <div class="flex-row">
-      <a href="https://medium.com/@pierreguillaumelaurin/uber-must-change-its-narrative-in-quebec-a5f1ca7a6c1b#.jx1lo3xxj"><button class="btn btn-default btn-position"><i class="fa fa-medium"></i> Medium</button></a>
-      </div>
+      <a href="https://medium.com/@pierreguillaumelaurin/uber-must-change-its-narrative-in-quebec-a5f1ca7a6c1b#.jx1lo3xxj" target="_blank"><button class="btn btn-default btn-position"><i class="fa fa-medium"></i> Medium</button>
+      </div></a>
   	</section>
 
     <section id="mba" class="content-section flex-column">
-      <p><span class="bold-font"> Warning: </span>I have an MBA!</p>
+      <p><span class="bold-font"> Warning: </span>I have an MBA</p>
       <p> For more on my previous life: </p>
       <div class="flex-row">
       <a href="https://ca.linkedin.com/in/pierre-guillaume-laurin-34b45a5b" target="_blank"><button class="btn btn-default btn-position"><i class="fa fa-linkedin"></i> LinkedIN</button></a>
