modify class and position of mail button

--- a/app/index.html
+++ b/app/index.html
@@ -77,8 +77,9 @@
   	<section id="contact" class="content-section flex-column">
   		<h2>I want to help!</h2>
       <div class="flex-row">
-      <a href='mailto:pierreguillaumelaurin@gmail.com'><i class="fa fa-4x fa-envelope icon-margins cd i-white btn-position"></i></a>
-      </div>
+        <div>
+          <a href='mailto:pierreguillaumelaurin@gmail.com'><i class="fa fa-4x fa-envelope btn-position"></i></a>
+        </div>
   	</section>
     
     <!--JQuery-->
